objects/Deployment__c.object
<CustomObject>
    <fields>
        <fullName>Compliance_End__c</fullName>
        <description>Created for CR-7163.</description>
        <label>Actual Compliance End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Compliance_Fee_Terms__c</fullName>
        <description>Created for CR-20141230-8421.</description>
        <label>Compliance Fee - Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_Membership_Fee__c</fullName>
        <description>Created for CR-20141230-8421.</description>
        <label>Compliance Membership Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Compliance_Start__c</fullName>
        <description>Created for CR-7163.</description>
        <label>Actual Compliance Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Configuration_File_Finalized_Actual__c</fullName>
        <label>Configuration File Finalized (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Configuration_File_Finalized_Deviation__c</fullName>
        <formula>Configuration_File_Finalized_Actual__c  -  Configuration_File_Finalized_Expected__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Configuration File Finalized (Deviation)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Configuration_File_Finalized_Expected__c</fullName>
        <label>Configuration File Finalized (Expected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Configuration_Planning_Actual__c</fullName>
        <label>Configuration Planning (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Configuration_Planning_Expected__c</fullName>
        <label>Configuration Planning (Expected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DeploymentsbaE0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consulting_Engagement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consulting Engagement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contingent_Revenue_Invoiced__c</fullName>
        <label>Contingent Revenue Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deployments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_CounterID__c</fullName>
        <formula>Project__r.Primary_Paid_Membership__r.Latest_Contract__r.Counter_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract CounterID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Received_Project_Checklist_Conf__c</fullName>
        <label>Contract Received/Project Checklist Conf</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>Created for CR-7163.</description>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>Realized Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance and Realized Savings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Controlled_Mrkt_Build_Cmplt_Actual__c</fullName>
        <description>4062 - CMR</description>
        <label>Controlled Mrkt Build Cmplt (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Controlled_Mrkt_Build_Cmplt_Projected__c</fullName>
        <description>CR4062 - CMR</description>
        <label>Controlled Mrkt Build Cmplt (Projected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Count_Deployment_Source_System__c</fullName>
        <description>Created for CR-20150812-9150.</description>
        <label>Count Deployment Source System</label>
        <summaryForeignKey>Source_System_JuncObj__c.Deployment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Crimson_Data_Pull__c</fullName>
        <inlineHelpText>Indicate wether a deployment data was pulled by Crimson or if member provided it.</inlineHelpText>
        <label>Crimson Data Pull</label>
        <picklist>
            <picklistValues>
                <fullName>Pulled by Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulled by Crimson</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Contract_Risk_Status__c</fullName>
        <formula>TEXT ( Project__r.Current_Contract_Risk_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Contract Risk Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Contract_Risk_Type__c</fullName>
        <formula>TEXT ( Project__r.Current_Contract_Risk_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Contract Risk Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Labor_Status__c</fullName>
        <description>Created for CR-20150202-8623.</description>
        <label>Current Labor Status</label>
        <picklist>
            <picklistValues>
                <fullName>In-house</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outsourced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DAS_Approved_Actual__c</fullName>
        <label>DAS Approved (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DAS_Approved_Deviation__c</fullName>
        <formula>(blankvalue( DAS_Approved_Actual__c,Today()) -  DAS_Approved_Expected__c ) /7</formula>
        <label>DAS Approved (Deviation)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DAS_Approved_Expected__c</fullName>
        <label>DAS Approved (Expected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DAS_Approved_to_Initial_Site_Build_Comp__c</fullName>
        <description>Created for CR-20150114-8556 WO</description>
        <formula>C_A_ISBC__c - DAS_Approved_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DAS Approved to Initial Site Build Comp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DAS_Received_Actual__c</fullName>
        <label>DAS Received (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DAS_Received_Deviation__c</fullName>
        <formula>(blankvalue( DAS_Received_Actual__c ,Today()) -  DAS_Received_Expected__c )/7</formula>
        <label>DAS Received (Deviation)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DAS_Received_Expected__c</fullName>
        <label>DAS Received (Expected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DAS_Received_to_DAS_Approved__c</fullName>
        <description>Created for  CR-20150114-8556 WO</description>
        <formula>DAS_Approved_Actual__c - DAS_Received_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DAS Received to DAS Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Acquisition_Agent__c</fullName>
        <description>Created as per CR-20150602-8985.</description>
        <label>Data Acquisition Agent</label>
        <picklist>
            <picklistValues>
                <fullName>Bi-directional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unidirectional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>File</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Acquisition_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created for CR-20150623-9023.</description>
        <label>Data Acquisition Analyst</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Deployments (Data Acquisition Analyst)</relationshipLabel>
        <relationshipName>Deployments8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Acquisition_Call_Actual__c</fullName>
        <description>CR-595</description>
        <label>Data Acquisition Call (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Acquisition_Call_Expected__c</fullName>
        <description>CR-595</description>
        <label>Data Acquisition Call (Expected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Acquisition__c</fullName>
        <inlineHelpText>Select whether the member of the Crimson team is owning the data acquisition/extraction process for this deployment.</inlineHelpText>
        <label>Data Acquisition</label>
        <picklist>
            <picklistValues>
                <fullName>Undecided</fullName>
                <color>#BBBBBB</color>
            </picklistValues>
            <picklistValues>
                <fullName>Crimson Owned</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>Member Owned</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>DAS Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Analyst_Group_Lead__c</fullName>
        <formula>Project__r.Crimson_Data_Analyst_Group_Lead__r.FirstName + &apos; &apos; +  Project__r.Crimson_Data_Analyst_Group_Lead__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzData Analyst Group Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Analyst_Group_Lead_new__c</fullName>
        <description>Created as part of CR-3894</description>
        <label>Data Analyst Group Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Audit_Received_Actual__c</fullName>
        <label>Data Audit Received (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Audit_Received_Expected__c</fullName>
        <label>Data Audit Received (Expected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Audit_Sign_Off_Actual__c</fullName>
        <label>Data Audit Sign Off (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Audit_Sign_Off_Expected__c</fullName>
        <label>Data Audit Sign Off (Expected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Collection_Actual__c</fullName>
        <label>Data Collection (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Collection_Target__c</fullName>
        <label>Data Collection (Target)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Date_Range__c</fullName>
        <description>Created for CR-20150429-8923</description>
        <label>Data Date Range</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Delivered_from_Vendor__c</fullName>
        <description>Created for CR-20150903-9219.</description>
        <inlineHelpText>When was this deployment&apos;s data provided by Milliman?</inlineHelpText>
        <label>Data Delivered from Vendor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Diagnostics_Complete_Deviation__c</fullName>
        <formula>(blankvalue( C_A_DDC__c ,Today())- C_E_DDC__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Diagnostics Complete (Deviation)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Diagnostics_Complete_Original__c</fullName>
        <description>Created as part of CR-5511.</description>
        <label>Data Diagnostics Complete (Original)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Diagnostics_Sent_Expected__c</fullName>
        <label>Data Diagnostics Sent (Expected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Direction__c</fullName>
        <description>CR4062 - for CMR products</description>
        <label>Data Direction</label>
        <picklist>
            <picklistValues>
                <fullName>Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Handoff_to_Product_Actual__c</fullName>
        <description>Thic field is created for CR-20150623-9023.</description>
        <label>Data Handoff to Product (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Handoff_to_Product_Expected__c</fullName>
        <description>This field is created for CR-20150623-9023</description>
        <label>Data Handoff to Product (Expected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Handoff_to_Product_Expected_vs_Act__c</fullName>
        <description>Thic field is created for CR-20150623-9023.</description>
        <formula>Data_Handoff_to_Product_Expected__c  -  Data_Handoff_to_Product_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Handoff to Product (Expected vs Act</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Hub_Bootstrapping__c</fullName>
        <description>Thic field is created for CR-20150623-9023.</description>
        <formula>Receive_Test_Data_Actual__c  -  ICDM_sample_data_diags_resolved_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Hub Bootstrapping</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Hub_Processing__c</fullName>
        <description>Thic field is created for CR-20150623-9023.</description>
        <formula>Receive_Test_Data_Actual__c  -  Data_Handoff_to_Product_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Hub Processing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Platform_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created for CR-20150623-9023.</description>
        <label>Data Platform Analyst</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Deployments (Data Platform Analyst)</relationshipLabel>
        <relationshipName>Deployments7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Requirement_Freeze_on_Data_Extracts__c</fullName>
        <label>Data Requirement Freeze on Data Extracts</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Sent_to_Vendor_Actual__c</fullName>
        <description>Created as per CR-20141218-8365.</description>
        <label>Data Sent to Vendor (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Sent_to_Vendor_Expected__c</fullName>
        <description>Created for CR-20141218-8365.</description>
        <label>Data Sent to Vendor (Expected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Sent_to_Vendor_to_DAS_Received__c</fullName>
        <description>Created for CR-20150114-8556 WO</description>
        <formula>DAS_Received_Actual__c - Data_Sent_to_Vendor_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Sent to Vendor to DAS Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Sent_to_Vendor_to_In_Site_Build_Com__c</fullName>
        <description>Created for CR-20150114-8556 WO</description>
        <formula>C_A_ISBC__c - Data_Sent_to_Vendor_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Sent to Vendor to In Site Build Com</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Services_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Services Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deployments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <description>This field is used to track deployment information for the EAB team. Created for CR-20151116-9383.</description>
        <label>Data Source</label>
        <picklist>
            <picklistValues>
                <fullName>1.Banner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.PeopleSoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.Shadow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.Oracle E-Business Suite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.Colleague</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Compass_Feed__c</fullName>
        <description>Created for CR-7163.</description>
        <label>Date of Last Compass Feed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Mid_Bid_Review_Actual__c</fullName>
        <label>Date of Mid-Bid Review (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Mid_Bid_Review_Target__c</fullName>
        <label>Date of Mid-Bid Review (Target)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Physician_Onsite_Post_Actual__c</fullName>
        <inlineHelpText>Date of Physician Onsite (Post-Event)</inlineHelpText>
        <label>Date of Physician Onsite (Post) Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Physician_Onsite_Post_Target__c</fullName>
        <inlineHelpText>Date of Physician Onsite (Post-Event) Target</inlineHelpText>
        <label>Date of Physician Onsite (Post) Target</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Physician_Onsite_Pre_Actual__c</fullName>
        <label>Date of Physician Onsite (Pre) Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Physician_Onsite_Pre_Target__c</fullName>
        <label>Date of Physician Onsite (Pre) Target</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Initial_Site_Build_Complete__c</fullName>
        <description>CR-20120203</description>
        <formula>C_A_DC__c - C_A_ISBC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days elapsed since Initial Site Build Complete, up to Deployment Sign Off date</inlineHelpText>
        <label>Days Since Initial Site Build Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dedicated_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is not being populated using the project object.  The dedicated advisor should be filled for every new type of deployment under a project to keep track of who was the dedicated advisor during that particular deployment.</inlineHelpText>
        <label>Dedicated Advisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deployments3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Support_Record_Type_ID__c</fullName>
        <formula>Deployment_Type__r.Default_Dep_Support_Ticket_Recordtype__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Support Record Type ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Executive__c</fullName>
        <description>Created as part of CR-5000</description>
        <label>Delivery Executive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Principle__c</fullName>
        <description>Created as part of CR-5000</description>
        <label>Delivery Principle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_Delay_Notes__c</fullName>
        <description>Holds data from the field on project called &apos;Notes:  Implementation and Data&apos;</description>
        <inlineHelpText>Holds data from the field on project called &apos;Notes: Implementation and Data&apos;, populated by workflow rule.</inlineHelpText>
        <label>Deployment Delay Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deployment_Deployment_Type__c</fullName>
        <description>Created as part of CR-3871. This field exists to show &quot;Delivery Chatter Plus User - Restricted 15&quot; profile what the associated Deployment Type is, as they will no longer have access to that object. It is only viewable by that profile and SysAdmin.</description>
        <formula>Deployment_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment: Deployment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_Description__c</fullName>
        <label>Deployment Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deployment_Detail__c</fullName>
        <label>Deployment Detail</label>
        <picklist>
            <picklistValues>
                <fullName>NBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Save</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deployment_End__c</fullName>
        <formula>(blankvalue( C_A_DC__c , TODAY()) - Deployment_Sign_Off_Original__c)/7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment End (Deviation)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deployment_Module__c</fullName>
        <description>Created for CR-20150518-8955.</description>
        <inlineHelpText>Select applicable data source for this deployment.</inlineHelpText>
        <label>Deployment Module</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Billing &amp; Scheduling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Ledger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deployment_Notes__c</fullName>
        <description>CR-20121212-1894</description>
        <label>Deployment Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deployment_Phase__c</fullName>
        <inlineHelpText>Select the phase this deployment is currently in</inlineHelpText>
        <label>Deployment Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Legal Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Under Review - Crimson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Under Review - Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0 - Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Data Gathering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Site Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Verification and Sign-Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Deployment Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Contract Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Contract Drop Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - Contract Dropped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADT Go Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete Data In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Diagnostics Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployment End</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployment Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagnostics Sign Off Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback on Initial Data Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Data In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Site Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Validation Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Validation Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Model Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring Update Sign-Off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deployment_SignOff_Deviation__c</fullName>
        <formula>(blankvalue(C_A_DC__c, Today()) - C_E_DC__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment SignOff (Deviation)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deployment_Sign_Off_Original__c</fullName>
        <description>Created as part of CR-5511.</description>
        <label>Deployment Sign-Off (Original)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deployment_Stage__c</fullName>
        <description>CR-595</description>
        <label>Deployment Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Future</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verification &amp; Sign Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deployment_Start_Expected__c</fullName>
        <description>CR-3836</description>
        <label>Deployment Start (Expected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deployment_Start_Implemt_Plan_Complete__c</fullName>
        <formula>Implementation_Plan_Complete_Actual__c - C_A_DS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment Start-Implemt Plan Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deployment_Start_Int_Validation_Complete__c</fullName>
        <formula>(C_A_IVC__c - C_A_DS__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment Start-Int Validation Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deployment_Start_Measure_Mapping__c</fullName>
        <formula>Measure_Mapping_Complete_Actual__c - C_A_DS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment Start - Measure Mapping</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deployment_Start_Physician_Roster_Comp__c</fullName>
        <formula>Physician_Roster_Complete_Actual__c - C_A_DS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment Start-Physician Roster Comp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deployment_Start_Practice_Survey_Complet__c</fullName>
        <formula>Practice_Survey_Complete_Actual__c - C_A_DS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment Start-Practice Survey Complet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deployment_Start_Technical_Planning_Call__c</fullName>
        <formula>Technical_Planning_Call_Actual__c - C_A_DS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment Start-Technical Planning Call</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>